--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,17 @@
+{% load static%}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="text-gray-900 leading-tight">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snacks website</title>
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+    <link rel = 'stylesheet' href="{% static 'base.css' %}"/>
 </head>
 <body>
     <header>
-        <button><a href="{% url 'snack_list'%}">Home</a></button>
+        <button class="lg:dark:hover:bg-white ..."><a href="{% url 'snack_list'%}">Home</a></button>
     </header>
     <main>
      {% block content %}
