--- a/templates/snack_create.html
+++ b/templates/snack_create.html
@@ -6,7 +6,7 @@
    <form action="" method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value="Add">
+    <input class="bg-red-500 hover:bg-red-700 ..." type="submit" value="Add">
    </form>
    
 {% endblock content %}
