--- a/templates/snack_delete.html
+++ b/templates/snack_delete.html
@@ -4,7 +4,7 @@
    <form action="" method="POST">
     {% csrf_token %}
     <h4>You are going to delete the {{snack.title}} snack, Are you sure about this ?</h4>
-    <input type="submit" value="Delete">
+    <input class="bg-red-500 hover:bg-red-700 ..." type="submit" value="Delete">
    </form>
  
 
