--- a/templates/snack_detail.html
+++ b/templates/snack_detail.html
@@ -7,6 +7,6 @@
   <p>Purchaser: {{ snack.purchaser }}</p>
   <p>Description: {{ snack.description }}</p>
 </div>
-<button><a href="{% url 'snack_delete' snack.pk%}">Delete this Snack </a></button>
-<button><a href="{% url 'snack_update' snack.pk%}">Update this Snack</a> </button>
+<button class="bg-red-500 hover:bg-red-700 ..."><a href="{% url 'snack_delete' snack.pk%}">Delete this Snack </a></button>
+<button class="bg-red-500 hover:bg-red-700 ..."><a href="{% url 'snack_update' snack.pk%}">Update this Snack</a> </button>
 {% endblock content %}
