--- a/templates/snack_update.html
+++ b/templates/snack_update.html
@@ -5,7 +5,7 @@
    <form action="" method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <input type="submit" value="Update">
+    <input class="bg-red-500 hover:bg-red-700 ..." type="submit" value="Update">
    </form>
    
 {% endblock content %}
