--- a/templates/base.html
+++ b/templates/base.html
@@ -6,16 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snacks website</title>
-    <!-- <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel = 'stylesheet' href="{% static 'base.css' %}"/>
 </head>
 <body>
     <header>
-        <button class="lg:dark:hover:bg-white ..."><a href="{% url 'snack_list'%}">Home</a></button>
+        <h1>Welcome to Healthy snacks Website</h1>
     </header>
     <main>
      {% block content %}
      {% endblock content %}
+     <button class="bg-red-500 hover:bg-red-700 ..."><a href="{% url 'snack_list'%}">Home</a></button>
     </main>
     <footer><p>&copy;All rights reserved to Haya</p></footer>
 </body>
