--- a/templates/snack_list.html
+++ b/templates/snack_list.html
@@ -2,8 +2,9 @@
 
 
 {% block content %}
-<button><a href="{% url 'snack_create'%}">Creat Your Snack</a></button>
+
 {% for snack in object_list %}
-  <li><a href="{% url 'snack_detail' snack.pk %}">Snack : {{snack.title}}</a></li>
+  <h4><a href="{% url 'snack_detail' snack.pk %}">Snack : {{snack.title}}</a></h4>
   {%endfor%}
+  <button class="bg-red-500 hover:bg-red-700 ..."><a href="{% url 'snack_create'%}">Creat Your Snack</a></button>
 {% endblock content %}
